--- a/Blackout/Blackout.css
+++ b/Blackout/Blackout.css
@@ -1,5 +1,5 @@
 /***** BLACKOUT *****|
- v0.6.0             *|
+ v0.6.1             *|
  a list design      *|
  by Valerio Lyndon  */
 
@@ -72,19 +72,19 @@ body::after,
 }
 body::before,
 #fancybox-overlay::before {
+	background-image: url(https://i.postimg.cc/BQnxxY6b/triangles-top.webp);
 	animation:
 		10s ease-in-out breath-in 1,
 		30s ease-in-out 10s breath infinite/*,
 		60s ease-in-out 0s rotate infinite*/;
-	mask: repeating-linear-gradient(to bottom, black 0px, black 102px, transparent 102px, transparent 208px, black 208px) center top / 110px 208px;
 }
 body::after,
 #fancybox-overlay::after {
+	background-image: url(https://i.postimg.cc/KcNP3SmC/triangles-bottom.webp);
 	animation:
 		10s ease-in-out breath-in 1 reverse,
 		44s ease-in-out 10s breath-reverse infinite/*,
 		60s ease-in-out 0s rotate infinite*/;
-	mask: repeating-linear-gradient(to bottom, transparent 0px, transparent 102px, black 102px, black 208px, transparent 208px) center top / 110px 208px;
 }
 #fancybox-overlay::before,
 #fancybox-overlay::after {
