--- a/Blackout/Blackout.css
+++ b/Blackout/Blackout.css
@@ -1,5 +1,5 @@
 /***** BLACKOUT *****|
- v0.6.1             *|
+ v0.7.0             *|
  a list design      *|
  by Valerio Lyndon  */
 
@@ -11,8 +11,9 @@
 
 :root {
 	--b: #000;
-	--bimg: url(https://i.imgur.com/t46uco0.png);
-	--grain: url(https://i.imgur.com/Y491kwo.png);
+	--g: url(https://i.postimg.cc/28dSSrmB/grain.png);
+	--gt: url(https://i.postimg.cc/nLWHPLKN/grain-transparent.png);
+	--gl: url(https://i.postimg.cc/ydJN1RYV/grain-large.png);
 	--f: #131313aa;
 	--f2: #181818aa;
 	--f3: #131313;
@@ -51,7 +52,7 @@ html {
 }
 
 body.ownlist {
-	background: var(--bimg) repeat;
+	background: var(--g) repeat;
 	background-color: var(--b) !important;
 	color: var(--t) !important;
 	font-size: 3em;
@@ -67,7 +68,7 @@ body::after,
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: url(https://i.imgur.com/XrhwAmh.png) repeat center top / auto fixed;
+	background: repeat center top / auto fixed;
 	opacity: 0.08;
 }
 body::before,
@@ -245,12 +246,12 @@ a:hover,
 	display: block;
 	width: 100%;
 	height: 16rem;
-	background: var(--f3);
+	background: var(--gt) repeat var(--f3);
 	margin-bottom: 6rem;
 	--clip-1: 6rem;
 	--clip-2: var(--clip-1);
-	clip-path: polygon(0 var(--clip-1), var(--clip-1) 0, 100% 0, 100% calc(100% - var(--clip-2)), calc(100% - var(--clip-2)) 100%, 0 100%);
 	clip-path: polygon(0 0, calc(100% - var(--clip-1)) 0, 100% var(--clip-1), 100% 100%, var(--clip-2) 100%, 0 calc(100% - var(--clip-2)));
+/* 	clip-path: polygon(0 var(--clip-1), var(--clip-1) 0, 100% 0, 100% calc(100% - var(--clip-2)), calc(100% - var(--clip-2)) 100%, 0 100%); */
 }
 
 /* category menu */
@@ -267,7 +268,7 @@ a:hover,
 	position: relative;
 	left: -170rem;
 	display: flex;
-	width: 100rem;
+	width: 170rem;
 	padding: 2rem;
 }
 
@@ -332,11 +333,57 @@ a:hover,
 	content: none;
 }
 
+/* search */
+
+#list-container .search-container {
+	top: 2rem;
+	right: 2rem;
+}
+
+#list-container #search-box,
+#list-container #search-box input {
+	display: block;
+	width: 20rem;
+	height: 5.5rem;
+	flex: 0 0 auto;
+	order: -1;
+	--clip-1: 5rem;
+	--clip-2: 1rem;
+	clip-path: polygon(0 0, calc(100% - var(--clip-1)) 0, 100% var(--clip-1), 100% 100%, var(--clip-2) 100%, 0 calc(100% - var(--clip-2)));
+}
+#list-container #search-box {
+	padding: .25rem;
+	background: linear-gradient(135deg, var(--b1), var(--b2));
+	margin: 0;
+}
+#list-container #search-box:focus-within {
+	width: 50rem;
+}
+#list-container #search-box input {
+	width: 100%;
+	height: 100%;
+	padding-right: 5rem;
+	background: var(--f);
+	border: none;
+	color: inherit;
+	font-size: 3.6rem;
+	line-height: 12.13rem;
+	font-family: inherit;
+}
+
+#list-container #search-button {
+	position: absolute;
+	top: 1.5rem;
+	right: 3.5rem;
+	margin: 0;
+	font-size: 3rem;
+	pointer-events: none;
+	opacity: 0.5;
+}
+
 
 /* TEMP */
-.list-unit .list-status-title,
-.list-table > tbody:first-of-type,
-.search-container
+.list-unit .list-status-title
 {
 	display: none;
 }
@@ -414,6 +461,82 @@ a:hover,
 /* temp */
 
 .icon-menu.setting {
+	display: none;
+}
+
+/* sort menu */
+
+.list-table > tbody:first-of-type {
+	position: relative;
+	z-index: 5;
+	display: flex;
+	flex-flow: column nowrap;
+	align-items: flex-end;
+	width: 20rem;
+	height: 8rem;
+	margin: calc(-6rem + -2rem + -5.5rem) 2rem 0 auto;
+}
+
+.list-table > tbody:first-of-type::before,
+.list-table > tbody:first-of-type::after {
+	content: "";
+	display: block;
+	width: 100%;
+	height: 5.5rem;
+	flex: 0 0 auto;
+	order: -1;
+	--clip-1: 1rem;
+	--clip-2: 2rem;
+	clip-path: polygon(0 0, calc(100% - var(--clip-1)) 0, 100% var(--clip-1), 100% 100%, var(--clip-2) 100%, 0 calc(100% - var(--clip-2)));
+}
+.list-table > tbody:first-of-type::before {
+	background: linear-gradient(135deg, var(--b1), var(--b2));
+}
+.list-table > tbody:first-of-type::after {
+	content: "\f0dc  Sort";
+	height: 5rem;
+	width: calc(100% - 0.5rem);
+	background: var(--f);
+	margin-top: -5.25rem;
+	margin-right: .25rem;
+	line-height: 5.25rem;
+	font-size: 3.6rem;
+	font-weight: bold;
+	text-align: center;
+}
+
+.list-table-header {
+	display: block;
+	width: 30rem;
+	padding: 2rem;
+	background: var(--f);
+	border: 1px solid var(--b1);
+	opacity: 0;
+	transition: opacity 0.2s ease-out;
+	pointer-events: none;
+	margin-top: 2rem;
+}
+tbody:hover .list-table-header {
+	opacity: 1;
+	pointer-events: auto;
+}
+#list-container .header-title {
+	display: block;
+	width: auto;
+	height: auto;
+	padding: 0;
+	background: none;
+	border: none;
+	font-size: 0;
+	text-align: right;
+}
+#list-container .header-title .link.sort {
+	display: block;
+	padding: .5rem 1rem;
+	font-size: 3.3rem;
+	transition-duration: 0s;
+}
+#list-container .header-title .link:not(.sort) {
 	display: none;
 }
 
@@ -693,7 +816,7 @@ a:hover,
 	display: block;
 	width: 100%;
 	height: 100%;
-	background: var(--b) var(--grain) center / auto repeat;
+	background: var(--b) var(--gl) center / auto repeat;
 	clip-path: inherit;
 }
 
@@ -1164,7 +1287,7 @@ a.mal-icon .malicon {
 }
 
 #fancybox-outer {
-	background: var(--b) var(--bimg) repeat;
+	background: var(--b) var(--g) repeat;
 }
 
 #fancybox-inner iframe {
